# Bongo

./: .clang-format  .gitignore  CMakeLists.txt  README.md  conanfile.py  conanfile.txt  config.h.in  configure  http_client.hpp  main.cpp  main2.cpp  makefile  nse.cpp  sauthstring.h  scurlclient.hpp  shttpparameters.h  shttpproxies.cpp  snetworktypes.h  spayload.h  urilite.h
docker/: Dockerfile
examples/: CMakeLists.txt  bongo.cpp  conanfile.txt  configure  example.cpp  main.cpp  main2.cpp  main3.cpp  nse.cpp  sender_reciever.cpp
include/: bongo.hpp  http_client.hpp  httpstatuscode.h  scookies.h  scurlclient.hpp  scurlholder.h  sender_reciever.hpp  shttperror.h  shttpproxies.h  shttputil.h  smultipart.h  smultipart_parser.h  snetworktimeout.h  snetworktypes.h  urilite.h
src/: CMakeLists.txt  bongo.hpp  http_client.hpp  sauthstring.h  scookies.cpp  scookies.h  scurlcallback.h  scurlclient.hpp  scurlholder.cpp  scurlholder.h  shttperror.cpp  shttperror.h  shttpparameters.h  shttpproxies.cpp  shttpproxies.h  shttputil.cpp  shttputil.h  smultipart_parser.cpp  snetworktimeout.h  snetworktypes.h  spayload.h  ssloptions.h  urilite.h
